# crowdfunding

./: .gitignore  Cargo.toml
mandos/: adder.scen.json  crowdfunding-fund.scen.json  crowdfunding-init.scen.json  test-fund-too-late.scen.json
meta/: Cargo.toml
src/: crowdfunding_main.rs
tests/: adder_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
