[package]
name = "crowdfunding"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/crowdfunding_main.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.27.4"

[dependencies.elrond-wasm-derive]
version = "0.27.4"

[dependencies.elrond-wasm-node]
version = "0.27.4"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.27.4"